# rover

./: README.md
daemon/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
daemon/src/: deviceuc0service.cpp  deviceuc0service.h  exceptions.h  logging.cpp  logging.h  main.cpp  messagequeue.cpp  messagequeue.h  messagequeue.th  netservice.cpp  netservice.h  nettypes.h  server.cpp  server.h  util.h  videostreammanager.c  videostreammanager.cpp  videostreammanager.h
firmware/arduino_uno/uc0/: uc0.ino
uclib/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
uclib/src/: roveruclibtest.c  types.h  uc.c  uc.h
